@@ -9,6 +9,7 @@ New features:
 * Added possibility to change hashcat's workload profile.
 * Added support to automatically extract hashes from your Bitcoin/Litecoin/Ethereum/Exodus/MetaMask/Electrum wallets.
 * Added possibility to set priority (low/normal/high) of a new job in 'Additional settings'.
+* Added possibility to resume timeouted jobs.
 
 Fixes:
 * ...
